Update README with setup instructions